# FractalMidPointDisplacement

./: CMakeLists.txt  README.md  main.cpp  midPointDisplacement2D.cpp
include/: Aux_funcs.hpp  DisplacementAlgoritms.hpp
src/: Aux_funcs.cpp  CMakeLists.txt  midPointDisplacement2D.cpp
test/: CMakeLists.txt  aux_funcs_test.cpp  testing.cpp  testing.py
